# teams-mcp-server

./: .env.example  Dockerfile  README.md  pyproject.toml  server.py
