[project]
name = "teams-mcp-server"
version = "0.2.0"
description = "MCP server for Microsoft Teams integration with Claude via Microsoft Graph API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "msal>=1.28.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
teams-mcp-server = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
